* cleanup this branch

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@
 
 // CSS components and utilities:
 @import './assets/scss/_animations.scss';
+@import './assets/scss/_accordion.scss';
 @import './assets/scss/_button.scss';
 @import './assets/scss/_code.scss';
 @import './assets/scss/_form.scss';
