--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,7 @@
 @import './assets/scss/_tooltip.scss';
 
 // General stylesheet:
+@import './assets/scss/_grid.scss';
 @import './assets/scss/_style.scss';
 
 // React component stylesheets:
