--- a/src/assets/scss/_style.scss
+++ b/src/assets/scss/_style.scss
@@ -77,6 +77,11 @@ a.is-dark {
   position: absolute;
   flex-direction: column;
   min-height: 100vh;
+  width: 100%;
+}
+
+.section--main-content {
+  min-height: 500px;
 }
 
 // This is used by the page / layout transitions
@@ -84,34 +89,33 @@ a.is-dark {
   width: 100%;
 }
 
-.main-content--column {
-  margin-left: auto !important;
-  margin-right: auto !important;
-  margin-bottom: 100px;
-  max-width: 1000px;
-  min-height: 600px;
-}
+// .main-content--column {
+//   margin-left: auto !important;
+//   margin-right: auto !important;
+//   margin-bottom: 100px;
+//   max-width: 1000px;
+//   min-height: 600px;
+// }
 
 .button-has-icon .has-text-link {
   margin-left: 0.5rem;
 }
 
-.main-content--column a,
-.main-content--column .has-text-link  {
+.has-text-link,
+.has-hover-border {
   border-bottom: 1px solid transparent;
   transition: all 200ms ease-in-out;
 }
 
-.main-content--column a:hover,
-.main-content--column .has-hover-border:hover {
+.has-hover-border:hover {
   border-bottom-color: rgba(5, 110, 220, 0.5);
 }
 
-.main-content--column a.button.is-text:hover {
+a.button.is-text:hover {
   border-bottom-color: $button-text-hover-color;
 }
 
-.main-content--column .button-has-icon {
+.button-has-icon {
   border: 0;
 }
 
