--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -1,22 +1,11 @@
 .navbar {
-  border-bottom: 1px solid lighten($text, 80%);
   z-index: 9999;
-}
-
-.navbar > .container {
-  // display: inline-block;
-  // width: unset;
 }
 
 .navbar > .container .navbar-brand,
 .container > .navbar .navbar-brand {
   margin-left: 0;
 }
-
-// .navbar-item,
-// .navbar-link {
-//   padding: 0;
-// }
 
 .navbar > .container .navbar-menu,
 .container > .navbar .navbar-menu {
@@ -34,14 +23,14 @@
 //     max-width: 800px;
 //   }
 //
-//   @media screen and (max-width: $desktop - 1px) {
+//   @media screen and (max-width: $navbar-breakpoint) {
 //     max-width: 100%;
 //   }
 // }
 //
 // .navbar .navbar-brand,
 // .navbar .navbar-end {
-//   @media screen and (max-width: $desktop - 1px) {
+//   @media screen and (max-width: $navbar-breakpoint) {
 //     margin: 0 auto;
 //     max-width: 80%;
 //   }
@@ -55,35 +44,31 @@
 //   }
 // }
 
-.navbar-end .navbar-item a {
-  border-bottom: 1px solid transparent;
-  // padding: 0.25rem 0.1rem;
-  transition: border 300ms ease-in-out;
-}
-
-.navbar-end .navbar-item a:hover {
-  border-bottom-color: rgba(255, 255, 255, 0.5);
-}
-
-// .navbar > .container .navbar-brand,
-// .container > .navbar .navbar-brand {
-//   @media screen and (min-width: 1088px) {
-//     margin-left: -0.325rem;
-//   }
-// }
-
-.navbar.is-dark {
-  background-color: darken($navbar-grey, 4%);
-  background-image: linear-gradient(to bottom, darken($navbar-grey, 6%) 0%, #161616 70%, #121212 100%);
-  // border-bottom: 2px solid black;
-  border: 0;
-}
-
 .navbar-brand {
-  @media screen and (max-width: $desktop - 1px) {
+  @media screen and (max-width: $navbar-breakpoint) {
     z-index: 2000;
     position: relative;
   }
+}
+
+.navbar-brand .navbar-item {
+  margin-right: 0.5rem;
+}
+
+.navbar-brand svg.navbar-brand__tertiary-logo {
+  margin-left: 0;
+  margin-top: -0.125rem;
+  opacity: 0.75;
+  width: 90px;
+
+  @media screen and (max-width: $mobile) {
+    display: none;
+  }
+}
+
+.navbar-brand__tertiary-logo:hover {
+  opacity: 1;
+  transition: opacity 150ms ease-in-out;
 }
 
 .navbar-brand svg {
@@ -114,25 +99,23 @@
   fill: white;
 }
 
-.navbar-item.no-margin-right {
-  margin-right: 0;
+.navbar-end .navbar-item a {
+  border-bottom: 1px solid transparent;
+  transition: border 300ms ease-in-out;
 }
 
-.navbar-brand svg.navbar-brand__tertiary-logo {
-  margin-left: 0;
-  margin-top: -0.125rem;
-  opacity: 0.75;
-  width: 90px;
-
-  @media screen and (max-width: 460px) {
-    display: none;
-  }
+.navbar-end .navbar-item a:hover {
+  border-bottom-color: rgba(255, 255, 255, 0.5);
 }
 
-.navbar-brand__tertiary-logo:hover {
-  opacity: 1;
-  transition: opacity 150ms ease-in-out;
+.navbar.is-dark {
+  background-color: darken($navbar-grey, 4%);
+  background-image: linear-gradient(to bottom, darken($navbar-grey, 6%) 0%, #161616 70%, #121212 100%);
 }
+
+// .navbar-item.no-margin-right {
+//   margin-right: 0;
+// }
 
 .navbar-item svg:hover {
   transition: transform 150ms ease-in;
@@ -159,16 +142,16 @@ a.navbar-item,
   font-size: 0.75rem;
   font-weight: 900;
   letter-spacing: 0.05rem;
-  padding: 0.5rem 0.25rem 0.325rem;
+  padding: 0.5rem 0 0.325rem;
   text-transform: uppercase;
 
-  @media screen and (min-width: 1090px) {
-    margin-right: 0.2rem;
-  }
+  // @media screen and (min-width: 1090px) {
+  //   margin-right: 0.2rem;
+  // }
 }
 
 .navbar-menu {
-  @media screen and (max-width: $desktop - 1px) {
+  @media screen and (max-width: $navbar-breakpoint) {
     text-align: right;
     display: block;
     position: absolute;
@@ -178,10 +161,14 @@ a.navbar-item,
   }
 }
 
+.navbar-menu .navbar-item {
+  margin-left: 1rem;
+}
+
 .navbar.is-dark .navbar-menu {
   background-color: transparent;
 
-  @media screen and (max-width: $desktop - 1px) {
+  @media screen and (max-width: $navbar-breakpoint) {
     background-color: darken($navbar-dark-background-color, 8%);
   }
 }
@@ -189,7 +176,7 @@ a.navbar-item,
 .navbar-menu.is-active {
   transform: translateZ(0);
 
-  @media screen and (max-width: $desktop - 1px) {
+  @media screen and (max-width: $navbar-breakpoint) {
     box-shadow: 0 8px 16px rgba(10,10,10,.1);
     position: absolute;
     width: 100%;
@@ -249,7 +236,7 @@ a.navbar-item,
   outline: none;
   width: 3em;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $navbar-breakpoint) {
     display: none;
   }
 }
@@ -338,3 +325,11 @@ a.navbar-item,
 .burger.burger-slip.open .burger-lines:after {
   transform: translateX(2em) rotate(-135deg);
 }
+
+// .navbar,
+// .navbar-menu,
+// .navbar-start,
+// .navbar-end {
+//   align-items: stretch;
+//   display: flex;
+// }
