--- a/src/assets/scss/_list.scss
+++ b/src/assets/scss/_list.scss
@@ -1,9 +1,4 @@
-.list--wrapper {
-  overflow-x: auto;
-  overflow-y: hidden;
-}
-
-.list.is-fullwidth {
+.list {
   width: 100%;
 }
 
@@ -96,11 +91,10 @@
 }
 
 .list--row_challenge {
-  grid-template-columns: 528px minmax(50px, 120px) minmax(66px, 140px) minmax(50px, 120px) 40px 40px;
+  grid-template-columns: 1fr minmax(50px, 120px) minmax(66px, 140px) minmax(50px, 120px) 40px 40px;
 
   @media screen and (max-width: $desktop - 1px) {
     grid-template-columns: 20fr minmax(50px, 63px) minmax(50px, 70px) minmax(50px, 50px) 40px 40px;
-    grid-template-rows: minmax(130px, max-content) 97px;
   }
 }
 
