--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -39,6 +39,10 @@
   border-bottom: 1px solid transparent;
   padding: 0.25rem 0.1rem;
   transition: border 300ms ease-in-out;
+
+  @media screen and (max-width: 970px) {
+    padding: 0.25rem 0.75rem;
+  }
 }
 
 .navbar-end .navbar-item a:hover {
@@ -172,28 +176,7 @@ a.navbar-item,
 
 .navbar-menu.is-active {
   transform: translateZ(0);
-
-  @media screen and (max-width: $desktop - 1px) {
-    box-shadow: 0 8px 16px rgba(10,10,10,.1);
-    position: absolute;
-    width: 100%;
-  }
-}
-
-.navbar .navbar-brand > .navbar-item,
-.navbar .navbar-brand .navbar-link {
-  @media screen and (max-width: 970px) {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-}
-
-.navbar-menu.is-active .navbar-item,
-.navbar-menu.is-active .navbar-link {
-  @media screen and (max-width: 970px) {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
+  box-shadow: 0 8px 16px rgba(10,10,10,.1);
 }
 
 .nav-background.is-active {
