--- a/src/assets/scss/_button.scss
+++ b/src/assets/scss/_button.scss
@@ -24,15 +24,10 @@ button[disabled]:active {
 .button.is-text {
   border-radius: 0;
   text-decoration: none;
-  margin-bottom: calc(0.375em - 1px);
+  margin-bottom: calc(0.375em);
   margin-left: 0;
   margin-right: 0;
   padding: 0;
-
-  @media screen and (min-width: $desktop) {
-    padding-left: 0;
-    padding-right: 0;
-  }
 }
 
 .button.is-text.has-extra-margin {
