--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,15 +1,17 @@
-// $gap: 64px;
 $gap: 64px;
+
 $mobile: 500px + (2 * $gap);
 $tablet: 668px + (2 * $gap);
 $desktop: 820px + (2 * $gap);
 $widescreen: 910px + (2 * $gap);
 $fullhd: 910px + (2 * $gap);
 
-// $screen_viewport_sm: 500px;
-// $screen_viewport_md: 668px;
-// $screen_viewport_lg: 820px;
-// $screen_viewport_xl: 910px;
+// These are good to use with min-width
+$mobileMin: 0px;     
+$tabletMin: $mobile + 1px;
+$desktopMin: $tablet + 1px;
+$widescreenMin: $desktop + 1px;
+$fullhdMin: $widescreen + 1px;
 
 // Static variables
 $body-line-height: 1.5;
@@ -17,15 +19,16 @@ $body-size: 16px;
 
 $navbar-height: 4rem;
 $navbar-breakpoint: $tablet;
+$navbar-breakpointMin: $desktopMin;
 
 $size-1: 2.2rem;
 $size-2: 1.8rem;
 $size-3: 1.6rem;
 $size-6: 0.9rem;
 
-$section-padding: 2rem 0.5rem;
-$section-padding-medium: 9rem 1.5rem;
-$section-padding-large: 18rem 1.5rem;
+$section-padding: 2rem 0;
+$section-padding-medium: 9rem 0;
+$section-padding-large: 18rem 0;
 
 $weight-semibold: 500;
 
