--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -58,9 +58,9 @@
   margin: 1rem 0;
   transition: border 300ms ease-in-out;
 
-  // @media screen and (max-width: 970px) {
-    // padding: 0.25rem 0.75rem;
-  // }
+  @media screen and (max-width: $navbar-breakpoint) {
+    font-size: 1rem;
+  }
 }
 
 .navbar-end .navbar-item:hover {
@@ -111,13 +111,17 @@
   fill: white;
 }
 
-.navbar-end .navbar-item a {
+.navbar-end .navbar-item {
   border-bottom: 1px solid transparent;
   transition: border 300ms ease-in-out;
 }
 
-.navbar-end .navbar-item a:hover {
+.navbar-end .navbar-item:hover {
   border-bottom-color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-menu.is-active .navbar-end .navbar-item:hover {
+  border-bottom-color: transparent;
 }
 
 .navbar.is-dark {
@@ -156,24 +160,33 @@ a.navbar-item,
   letter-spacing: 0.05rem;
   padding: 0.5rem 0 0.325rem;
   text-transform: uppercase;
-
-  // @media screen and (max-width: $tablet) {
-  //   font-size: 1rem;
-  // }
-
-  // @media screen and (min-width: 1090px) {
-  //   margin-right: 0.2rem;
-  // }
 }
 
 .navbar-menu {
   @media screen and (max-width: $navbar-breakpoint) {
-    text-align: right;
     display: block;
+    height: 250%;
     position: absolute;
-    transform: translate3d(0,-600px,0);
-    transition: transform .4s;
-    width: 100%;
+    right: calc(-1 * #{$gap});
+    text-align: right;
+    top: -250%;
+    transition: top 400ms cubic-bezier(0.35, 0.49, 0, 1);
+    width: $navbar-breakpointMin;
+  }
+}
+
+.navbar-menu.is-active {
+  @media screen and (max-width: $navbar-breakpoint) {
+    top: 100%;
+  }
+}
+
+.navbar-menu .navbar-end {
+  @media screen and (max-width: $navbar-breakpoint) {
+    height: 75%;
+    position: relative;
+    right: 3.75rem;
+    width: $navbar-breakpointMin;
   }
 }
 
@@ -191,12 +204,12 @@ a.navbar-item,
 
 .navbar-menu.is-active {
   // box-shadow: 0 8px 16px rgba(10,10,10,.1);
-  transform: translateZ(0);
+  // transform: translateZ(100px);
 
   @media screen and (max-width: $navbar-breakpoint) {
     box-shadow: 0 8px 16px rgba(10,10,10,.1);
-    position: absolute;
-    width: 100%;
+    // position: absolute;
+    // width: 100%;
   }
 }
 
@@ -244,7 +257,7 @@ a.navbar-item,
   cursor: pointer;
   font-size: 9px;
   height: 3em;
-  margin-right: 1.5rem;
+  // margin-right: 1.5rem;
   margin-top: 1.25rem;
   margin-left: auto;
   position: relative;
@@ -253,7 +266,7 @@ a.navbar-item,
   outline: none;
   width: 3em;
 
-  @media screen and (min-width: $navbar-breakpoint) {
+  @media screen and (min-width: $navbar-breakpointMin) {
     display: none;
   }
 }
