--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -12,38 +12,6 @@
   margin-right: 0;
 }
 
-// .navbar > .container {
-//   max-width: 890px;
-//
-//   @media screen and (max-width: $fullhd) {
-//     max-width: 762px;
-//   }
-//
-//   @media screen and (max-width: $widescreen) {
-//     max-width: 800px;
-//   }
-//
-//   @media screen and (max-width: $navbar-breakpoint) {
-//     max-width: 100%;
-//   }
-// }
-//
-// .navbar .navbar-brand,
-// .navbar .navbar-end {
-//   @media screen and (max-width: $navbar-breakpoint) {
-//     margin: 0 auto;
-//     max-width: 80%;
-//   }
-//
-//   @media screen and (max-width: $tablet) {
-//     max-width: 94%;
-//   }
-//
-//   @media screen and (max-width: 560px) {
-//     max-width: 92.5%;
-//   }
-// }
-
 .navbar-brand {
   @media screen and (max-width: $navbar-breakpoint) {
     z-index: 2000;
@@ -129,10 +97,6 @@
   background-image: linear-gradient(to bottom, darken($navbar-grey, 6%) 0%, #161616 70%, #121212 100%);
 }
 
-// .navbar-item.no-margin-right {
-//   margin-right: 0;
-// }
-
 .navbar-item svg:hover {
   transition: transform 150ms ease-in;
 }
@@ -167,7 +131,7 @@ a.navbar-item,
     display: block;
     height: 250%;
     position: absolute;
-    right: calc(-1 * #{$gap});
+    right: calc(-1 * #{$gridGap});
     text-align: right;
     top: -250%;
     transition: top 400ms cubic-bezier(0.35, 0.49, 0, 1);
@@ -176,9 +140,7 @@ a.navbar-item,
 }
 
 .navbar-menu.is-active {
-  @media screen and (max-width: $navbar-breakpoint) {
-    top: 100%;
-  }
+  top: 100%;
 }
 
 .navbar-menu .navbar-end {
@@ -202,34 +164,8 @@ a.navbar-item,
   }
 }
 
-.navbar-menu.is-active {
-  // box-shadow: 0 8px 16px rgba(10,10,10,.1);
-  // transform: translateZ(100px);
-
-  @media screen and (max-width: $navbar-breakpoint) {
-    box-shadow: 0 8px 16px rgba(10,10,10,.1);
-    // position: absolute;
-    // width: 100%;
-  }
-}
-
-// .navbar .navbar-brand > .navbar-item,
-// .navbar .navbar-brand .navbar-link {
-//   @media screen and (max-width: 970px) {
-//     padding-left: 0.75rem;
-//     padding-right: 0.75rem;
-//   }
-// }
-
-// .navbar-menu.is-active .navbar-item,
-// .navbar-menu.is-active .navbar-link {
-//   @media screen and (max-width: 970px) {
-//     padding-left: 0.75rem;
-//     padding-right: 0.75rem;
-//   }
-// }
-
 .nav-background.is-active {
+  box-shadow: 0 8px 16px rgba(10, 10, 10, .1);
   cursor: pointer;
   pointer-events: auto;
   z-index: 999;
@@ -249,7 +185,6 @@ a.navbar-item,
   background: black;
 }
 
-
 .burger {
   background-color: transparent;
   border: none;
@@ -257,7 +192,6 @@ a.navbar-item,
   cursor: pointer;
   font-size: 9px;
   height: 3em;
-  // margin-right: 1.5rem;
   margin-top: 1.25rem;
   margin-left: auto;
   position: relative;
@@ -355,11 +289,3 @@ a.navbar-item,
 .burger.burger-slip.open .burger-lines:after {
   transform: translateX(2em) rotate(-135deg);
 }
-
-// .navbar,
-// .navbar-menu,
-// .navbar-start,
-// .navbar-end {
-//   align-items: stretch;
-//   display: flex;
-// }
