Burger had a funny right margin on mobile

--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -199,6 +199,7 @@ a.navbar-item,
   user-select: none;
   outline: none;
   width: 3em;
+  margin-right: 1em;
 
   @media screen and (min-width: $navbar-breakpointMin) {
     display: none;
