--- a/src/assets/scss/components/Nav.scss
+++ b/src/assets/scss/components/Nav.scss
@@ -126,16 +126,23 @@ a.navbar-item,
   text-transform: uppercase;
 }
 
+.navbar-menu-container {
+  position: relative;
+}
+
 .navbar-menu {
   @media screen and (max-width: $navbar-breakpoint) {
     display: block;
     height: 250%;
     position: absolute;
-    right: calc(-1 * #{$gridGap});
     text-align: right;
     top: -250%;
     transition: top 400ms cubic-bezier(0.35, 0.49, 0, 1);
-    width: $navbar-breakpointMin;
+
+    left: -1rem;
+    right: 0;
+    box-sizing: content-box;
+    padding: 0 1rem;
   }
 }
 
@@ -146,9 +153,9 @@ a.navbar-item,
 .navbar-menu .navbar-end {
   @media screen and (max-width: $navbar-breakpoint) {
     height: 75%;
-    position: relative;
-    right: 3.75rem;
-    width: $navbar-breakpointMin;
+    position: absolute;
+    right: 0.75rem;
+    width: 100%;
   }
 }
 
