--- a/src/assets/scss/_list.scss
+++ b/src/assets/scss/_list.scss
@@ -91,8 +91,7 @@
 }
 
 .list--row.is-active *,
-.list--row:hover,
-.list--row:hover .list__wrapping-anchor {
+.list--row.list--row__hovered {
   background-color: darken($white-bis, 1%);
   transition: all 600ms ease-out;
 }
