--- a/src/assets/scss/_list.scss
+++ b/src/assets/scss/_list.scss
@@ -47,7 +47,7 @@
   padding: 1rem 3px;
 
   @media screen and (max-width: $mobile) {
-    padding: 1rem;
+    padding: 1.25rem;
   }
 }
 
@@ -57,6 +57,7 @@
 
 .list--cell:first-child > * {
   margin-left: 6px;
+  padding-right: 10px;
 
   @media screen and (max-width: $mobile) {
     margin-left: 0;
@@ -92,7 +93,7 @@
 
 .list--row.is-active *,
 .list--row.list--row__hovered {
-  background-color: darken($white-bis, 1%);
+  background-color: darken($white-bis, 2%);
   transition: all 600ms ease-out;
 }
 
@@ -102,17 +103,19 @@
 }
 
 .list--row_challenge {
-  grid-template-columns: 500px 120px minmax(66px, 140px) minmax(50px, 120px) 40px 40px;
-
+  grid-template-columns: 1fr 120px 100px 70px 40px 100px;
+  
   @media screen and (max-width: $desktop) {
-    grid-template-columns: 1fr 120px minmax(60px, 80px) 50px 40px 40px;
+    grid-template-columns: 1fr 120px minmax(60px, 80px) 50px 40px 100px;
   }
 
   @media screen and (max-width: $mobile) {
     border-top: 1px solid #ececec;
     border-bottom: 1px solid #ececec;
-    grid-template: 'desc desc desc desc desc'
-      'status severity bounty github more';
+    grid-template: 'desc desc desc more'
+      'status severity bounty github';
+    grid-template-columns: 1fr 93px 110px 120px;
+    grid-template-rows: auto;
     margin-top: 3rem;
 
     &:nth-child(2) {
@@ -127,6 +130,7 @@
   }
 }
 
+.list--row_challenge .more .list__has-padding,
 .list--row_challenge .desc .list__has-padding {
   @media screen and (max-width: $mobile) {
     padding-bottom: 0;
@@ -163,7 +167,6 @@
   }
 }
 
-.list--row_challenge .bounty .list__has-padding,
 .list--row_challenge .github .list__has-padding {
   @media screen and (max-width: $mobile) {
     padding-left: 0;
@@ -175,10 +178,6 @@
 .list--row__head.list--row_challenge {
   @media screen and (max-width: $mobile) {
     display: none;
-    // border: 1px solid #ececec;
-    // height: 1px;
-    // overflow: hidden;
-    // margin-bottom: 0;
   }
 }
 
