--- a/src/assets/scss/_list.scss
+++ b/src/assets/scss/_list.scss
@@ -83,11 +83,11 @@
   transform: scale3d(1, 1, 1);
 }
 
-.list--row:hover {
+.list--row.list--row_challenge:hover {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.03);
 }
 
-.list--row.is-active {
+.list--row.list--row_challenge.is-active {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
