--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,7 @@
 @import './assets/scss/_level.scss';
 @import './assets/scss/_list.scss';
 @import './assets/scss/_message.scss';
+@import './assets/scss/_tooltip.scss';
 
 // General stylesheet:
 @import './assets/scss/_grid.scss';
