--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -2,11 +2,10 @@ $addonsFormHeight: 57px;
 
 .form {
   padding: 3.5rem 0 8rem;
+}
 
-  @media (max-width: 800px) {
-    // margin: 0.25rem;
-    // padding: 0.5rem 0.5rem 8rem;
-  }
+.inline-form {
+  padding: 1rem 0;
 }
 
 .field:not(:last-child) {
