--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -1,5 +1,3 @@
-$addonsFormHeight: 57px;
-
 .form {
   padding: 3.5rem 0 8rem;
 }
@@ -99,11 +97,12 @@ label.radio,
 }
 
 .is-addons-form-toggler-height {
-  height: $addonsFormHeight + 24px;
+  height: 114px;
+  padding-top: 1rem;
 }
 
 .is-addons-form-height {
-  height: $addonsFormHeight;
+  height: 54px;
 }
 
 .field.has-addons {
