--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -12,8 +12,9 @@
 
 label,
 .label {
+  color: darken($grey-light, 15%);
   cursor: pointer;
-  font-family: $code-family;
+  font-family: $family-sans-serif;
   font-size: 1.125rem;
 }
 
